--- a/mysite/maps/templates/generate.html
+++ b/mysite/maps/templates/generate.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>length</title>
+    <title>generate</title>
     <div id="map" style="width:1080px;height:1080px"></div>
 </head>
 
