--- a/mysite/maps/templates/answer.html
+++ b/mysite/maps/templates/answer.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title></title>
 </head>
 <body>
-    <h3>{{form}}</h3>
+    <h1>{{hour}}</h1>
+    <h1>{{minute}}</h1>
+    <h1>{{route}}</h1>
 </body>
 </html>
