--- a/mysite/maps/templates/landing.html
+++ b/mysite/maps/templates/landing.html
@@ -6,57 +6,16 @@
     <title>Title</title>
 </head>
 <body>
-    <h3>{{data}}</h3>
-    <h3>{{data.0}}</h3>
-    <h3>{{data.0.address}}</h3>
-    <h3>{{data.0.duration}}</h3>
-    <h3>{{data.0.length}}</h3>
+    {% for p in data %}
+        <input type="hidden" id="id-{{p.id}}" data-view-mode="list" value="{{p.id}}" readonly></input>
+        <input type="hidden" id="address-{{p.id}}" data-view-mode="list" value="{{p.address}}" readonly></input>
+        <input type="hidden" id="duration-{{p.id}}" data-view-mode="list" value="{{p.duration}}" readonly></input>
+        <input type="hidden" id="length-{{p.id}}" type="text" name="name" value="{{p.id}}" readonly></input>
+    {% endfor %}
 
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=f5d06009-128c-48d7-a2ee-73160b64f9e8" type="text/javascript"></script>
-    <script type="text/javascript">
-        function draw () {
-            function init() {
-            // Задаём точки мультимаршрута.
-            var pointA = "Москва, проспект Мира, 119, стр. 53",
-                pointB = "Москва, проспект Мира, 119, стр. 31",
-                pointC = "Москва, проспект Мира, 119, стр. 20",
-                pointD = "Москва, площадь Дружбы Народов"
-                /**
-                 * Создаем мультимаршрут.
-                 * @see https://api.yandex.ru/maps/doc/jsapi/2.1/ref/reference/multiRouter.MultiRoute.xml
-                 */
-                 id = 0;
-                 address = "{{data.0.address}}";
-                 points = address.split('|');
-                 duration = {{data.0.duration}};
-                 length = {{data.0.length}};
-                 console.log(points);
-                 console.log(address);
-                 console.log(duration);
-                 console.log(length);
-                multiRoute = new ymaps.multiRouter.MultiRoute({
-                    referencePoints: points,
-                    params: {
-                        routingMode: 'pedestrian'
-                    }
-                }, {
-                    boundsAutoApply: true
-                });
+    <script type="text/javascript" src="{% static 'js/landing.js' %}">
 
-            // Создаем карту с добавленной на нее кнопкой.
-            var myMap = new ymaps.Map('map', {
-                center: [55.739625, 37.54120],
-                zoom: 12,
-                controls: []
-            });
-
-            // Добавляем мультимаршрут на карту.
-            myMap.geoObjects.add(multiRoute);
-        }
-
-        ymaps.ready(init);
-    };
-    window.onload = draw;
     </script>
 
     <div id="map" style="width:1080px; height:1080px"></div>
