--- a/mysite/maps/templates/draw.html
+++ b/mysite/maps/templates/draw.html
@@ -1,37 +1,43 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Настройка макета балуна метки</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=f5d06009-128c-48d7-a2ee-73160b64f9e8" type="text/javascript"></script>
+    <script src="https://yandex.st/jquery/2.2.3/jquery.min.js" type="text/javascript"></script>
+    <script src="{% static 'js/draw.js'%}" type="text/javascript"></script>
 </head>
+
 <body>
+
     <a href="{% url 'choose' %}">Выбор статических маршрутов</a> <br>
     <a href="{% url 'point' %}">Создать динамический маршрут</a> <br>
     <a href="{% url 'create' %}">Создать статический маршрут</a> <br>
-    {% for p in points %}
-        <div type="hidden" id="object-{{p.id}}" data-view-mode="list" value="{{p.id}}" >
+
+    <h3>Текущие точки: </h3>
+    <p id="point-array"></p>
+
+    <form action="/create/" method="post">
+        {% csrf_token %}
+        {{ form }}
+        <input type="submit" value="Построить маршрут">
+    </form>
+
+    {% for p in data %}
+        <!--div type="hidden" id="object-{{p.id}}" data-view-mode="list" value="{{p.id}}"-->
             <input type="hidden" id="id-{{p.id}}" data-view-mode="list" value="{{p.id}}" readonly>
             <input type="hidden" id="name-{{p.id}}" data-view-mode="list" value="{{p.name}}" readonly>
             <input type="hidden" id="x-{{p.id}}" data-view-mode="list" value="{{p.coord_x}}" readonly>
             <input type="hidden" id="y-{{p.id}}" data-view-mode="list" value="{{p.coord_y}}" readonly>
-        </div>
+        <!--/div-->
     {% endfor %}
-    <input type="hidden" id="address" data-view-mode="list" value="{{address}}" readonly>
-    <input type="hidden" id="duration" data-view-mode="list" value="{{duration}}" readonly>
-    <input type="hidden" id="length" data-view-mode="list" value="{{length}}" readonly>
-
-    <h3>Данные о маршруте:</h3>
-    <p id="point-array">Точки: </p>
-    <p>Длина: {{length}}</p>
-    <p>Продолжительность: {{duration}}</p>
-
-    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=f5d06009-128c-48d7-a2ee-73160b64f9e8" type="text/javascript"></script>
-    <script type="text/javascript" src="{% static 'js/answer.js' %}"> </script>
-
+    <input type="hidden" id="data" data-view-mode="list" value="{{data}}" readonly>
     <div id="map"></div>
 
-    <style type="text/css">
+	<style type="text/css">
         html, body {
             width: 100%;
             height: 95%;
@@ -72,7 +78,9 @@
             -webkit-filter: grayscale(100%);
         }
     </style>
+
 </body>
+
 </html>
 
-<!-- answer -->
+<!-- create -->
