--- a/mysite/maps/templates/error.html
+++ b/mysite/maps/templates/error.html
@@ -1,35 +1,15 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Error</title>
 </head>
 <body>
+    <h1>Ошибка</h1>
+    <p1>Маршрут с заданными параметарми невоможно построить</p1>
     <a href="{% url 'choose' %}">Выбор статических маршрутов</a> <br>
     <a href="{% url 'point' %}">Создать динамический маршрут</a> <br>
     <a href="{% url 'create' %}">Создать статический маршрут</a> <br>
-    {% for p in points %}
-        <div type="hidden" id="object-{{p.id}}" data-view-mode="list" value="{{p.id}}" >
-            <input type="hidden" id="id-{{p.id}}" data-view-mode="list" value="{{p.id}}" readonly>
-            <input type="hidden" id="name-{{p.id}}" data-view-mode="list" value="{{p.name}}" readonly>
-            <input type="hidden" id="x-{{p.id}}" data-view-mode="list" value="{{p.coord_x}}" readonly>
-            <input type="hidden" id="y-{{p.id}}" data-view-mode="list" value="{{p.coord_y}}" readonly>
-        </div>
-    {% endfor %}
-    <input type="hidden" id="address" data-view-mode="list" value="{{address}}" readonly>
-    <input type="hidden" id="duration" data-view-mode="list" value="{{duration}}" readonly>
-    <input type="hidden" id="length" data-view-mode="list" value="{{length}}" readonly>
-
-    <h3>Данные о маршруте:</h3>
-    <p id="point-array">Точки: </p>
-    <p>Длина: {{length}}</p>
-    <p>Продолжительность: {{duration}}</p>
-
-    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=f5d06009-128c-48d7-a2ee-73160b64f9e8" type="text/javascript"></script>
-    <script type="text/javascript" src="{% static 'js/answer.js' %}"> </script>
-
-    <div id="map"></div>
 
     <style type="text/css">
         html, body {
@@ -72,7 +52,6 @@
             -webkit-filter: grayscale(100%);
         }
     </style>
+
 </body>
 </html>
-
-<!-- answer -->
