--- a/mysite/maps/templates/point.html
+++ b/mysite/maps/templates/point.html
@@ -9,25 +9,36 @@
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=f5d06009-128c-48d7-a2ee-73160b64f9e8" type="text/javascript"></script>
     <script src="https://yandex.st/jquery/2.2.3/jquery.min.js" type="text/javascript"></script>
     <script src="{% static 'js/point.js'%}" type="text/javascript"></script>
+</head>
 
-    <form action="/form/" method="post">
+<body>
+    <a href="{% url 'choose' %}">Выбор статических маршрутов</a> <br>
+    <a href="{% url 'point' %}">Создать динамический маршрут</a> <br>
+    <a href="{% url 'create' %}">Создать статический маршрут</a> <br>
+    <form action="/p/" method="post">
         {% csrf_token %}
         {{ form }}
         <input type="submit" value="Submit">
     </form>
 
+    <h3>Текущие точки: </h3>
+    <p id="point-array"></p>
+    <!--div id="overlay" style="position: absolute;z-index:9999;">
+        {% for p in data %}
+            <input type="visible" style="width: 500px;height:30px" id="visual-{{p.id}}" data-view-mode="list" readonly value="{{p.name}}"> <br>
+        {% endfor %}
+    </div-->
+
     {% for p in data %}
         <!--div type="hidden" id="object-{{p.id}}" data-view-mode="list" value="{{p.id}}"-->
             <input type="hidden" id="id-{{p.id}}" data-view-mode="list" value="{{p.id}}" readonly>
             <input type="hidden" id="name-{{p.id}}" data-view-mode="list" value="{{p.name}}" readonly>
-            <input type="hidden" id="x-{{p.id}}" data-view-mode="list" value="{{p.address}}" readonly>
-            <input type="hidden" id="y-{{p.id}}" data-view-mode="list" value="false" readonly>
+            <input type="hidden" id="x-{{p.id}}" data-view-mode="list" value="{{p.coord_x}}" readonly>
+            <input type="hidden" id="y-{{p.id}}" data-view-mode="list" value="{{p.coord_y}}" readonly>
         <!--/div-->
     {% endfor %}
-
-    <div class="overlay-form">
-
-    </div>
+    <input type="hidden" id="data" data-view-mode="list" value="{{data}}" readonly>
+    <div id="map"></div>
 
 	<style type="text/css">
         html, body {
@@ -70,10 +81,9 @@
             -webkit-filter: grayscale(100%);
         }
     </style>
-</head>
 
-<body>
-    <div id="map"></div>
 </body>
 
 </html>
+
+<!-- create -->
