--- a/mysite/maps/templates/answer.html
+++ b/mysite/maps/templates/answer.html
@@ -23,8 +23,8 @@
 
     <h3>Данные о маршруте:</h3>
     <p id="point-array">Точки: </p>
-    <p>Длина: {{length}}</p>
-    <p>Продолжительность: {{duration}}</p>
+    <p id="text-length">Длина: {{length}}</p>
+    <p id="text-duration">Продолжительность: {{duration}}</p>
 
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=f5d06009-128c-48d7-a2ee-73160b64f9e8" type="text/javascript"></script>
     <script type="text/javascript" src="{% static 'js/answer.js' %}"> </script>
