--- a/mysite/maps/templates/draw.html
+++ b/mysite/maps/templates/draw.html
@@ -17,6 +17,7 @@
     <a href="{% url 'point' %}">Создать динамический маршрут</a> <br>
     <a href="{% url 'create' %}">Создать статический маршрут</a> <br>
 
+    <h1>Создание статического маршрута</h1>
     <h3>Текущие точки: </h3>
     <p id="point-array"></p>
 
