--- a/mysite/maps/templates/point.html
+++ b/mysite/maps/templates/point.html
@@ -20,7 +20,7 @@
         {{ form }}
         <input type="submit" value="Submit">
     </form>
-
+    <h1>Создание динамического маршрута</h1>
     <h3>Текущие точки: </h3>
     <p id="point-array"></p>
     <!--div id="overlay" style="position: absolute;z-index:9999;">
