--- a/mysite/maps/templates/point.html
+++ b/mysite/maps/templates/point.html
@@ -6,7 +6,7 @@
 <head>
     <title>Настройка макета балуна метки</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=76705826-55e5-44a1-932f-e4b73b0fcd6c" type="text/javascript"></script>
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=9aba40a3-4745-48d5-8eb5-d04a9e23e584" type="text/javascript"></script>
     <script src="https://yandex.st/jquery/2.2.3/jquery.min.js" type="text/javascript"></script>
     <script src="{% static 'js/point.js'%}" type="text/javascript"></script>
 </head>
@@ -86,4 +86,4 @@
 
 </html>
 
-<!-- create -->
+<!-- create new -->
