--- a/mysite/maps/templates/main.html
+++ b/mysite/maps/templates/main.html
@@ -18,7 +18,7 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "",
-		"logo": "images/Logistics_and_delivery_3_-_line-21-1024.webp"
+		"logo": "{% static 'Logo.webp' %}"
 }
         </script>
         <meta name="theme-color" content="#478ac9">
@@ -223,7 +223,6 @@
             <a class="u-link" href="" target="_blank">
                 <span>Website Builder Software</span>
             </a>
-            .
 
         </section>
     </body>
