--- a/mysite/maps/templates/dinamic.html
+++ b/mysite/maps/templates/dinamic.html
@@ -130,7 +130,7 @@
                     <div class="u-container-style u-list-item u-repeater-item u-shape-rectangle">
                       <div class="u-container-layout u-similar-container u-container-layout-4"><span class="u-file-icon u-icon u-text-palette-2-base u-icon-2"><img src="{% static 'images/marker.png' %}" alt=""></span>
                         <h4 class="u-text u-text-4">Выбранные точки</h4>
-                        <p class="u-text u-text-5">Ничего не выбрано</p>
+                        <p class="u-text u-text-5" id="point-array">Ничего не выбрано</p>
                       </div>
                     </div>
                   </div>
@@ -179,6 +179,15 @@
       </div>
     </section>
 
+  {% for p in data %}
+        <!--div type="hidden" id="object-{{p.id}}" data-view-mode="list" value="{{p.id}}"-->
+            <input type="hidden" id="id-{{p.id}}" data-view-mode="list" value="{{p.id}}" readonly>
+            <input type="hidden" id="name-{{p.id}}" data-view-mode="list" value="{{p.name}}" readonly>
+            <input type="hidden" id="x-{{p.id}}" data-view-mode="list" value="{{p.coord_x}}" readonly>
+            <input type="hidden" id="y-{{p.id}}" data-view-mode="list" value="{{p.coord_y}}" readonly>
+        <!--/div-->
+    {% endfor %}
+    <input type="hidden" id="data" data-view-mode="list" value="{{data}}" readonly>
 
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-e954"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Пример текста. Кликните, чтобы выбрать элемент "Текст".</p>
