--- a/mysite/maps/templates/dinamic.html
+++ b/mysite/maps/templates/dinamic.html
@@ -60,47 +60,38 @@
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/" /></head>
 
-  <body data-home-page="Главная.html" data-home-page-title="Главная" class="u-body u-xl-mode" data-lang="ru"><header class="u-clearfix u-header u-header" id="sec-9ea1"><div class="u-clearfix u-sheet u-valign-middle-xl u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1">
-          <img src="{% static 'images/Logo.webp' %}" class="u-logo-image u-logo-image-1">
-        </a>
-
-        <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
-          <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
-            <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
-              <svg class="u-svg-link" viewBox="0 0 24 24"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use></svg>
-              <svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"><g><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
-</g></svg>
-            </a>
-          </div>
-          <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#" style="padding: 10px 20px;">Главная</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10"><li class="u-nav-item"><a class="u-button-style u-nav-link u-white">Статический маршрут</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white">Динамический маршрут</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white">История маршрутов</a>
-</li></ul>
-</div>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#" style="padding: 10px 20px;">О нас</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#" style="padding: 10px 20px;">Контакты</a>
-</li></ul>
-          </div>
-          <div class="u-custom-menu u-nav-container-collapse">
-            <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
-              <div class="u-inner-container-layout u-sidenav-overflow">
-                <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-3"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">Главная</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10"><li class="u-nav-item"><a class="u-button-style u-nav-link">Статический маршрут</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link">Динамический маршрут</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link">История маршрутов</a>
-</li></ul>
-</div>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">О нас</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">Контакты</a>
-</li></ul>
-              </div>
+  <body data-home-page="Главная.html" data-home-page-title="Главная" class="u-body u-xl-mode" data-lang="ru">
+  <header class="u-clearfix u-header u-header" id="sec-6b7c">
+            <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+                <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="1024" data-image-height="1024">
+                    <img src="{% static 'images/Logo.webp' %}" class="u-logo-image u-logo-image-1">
+                </a>
+                <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
+                    <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
+                        <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
+                            <svg class="u-svg-link" viewBox="0 0 24 24">
+                                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use>
+                            </svg>
+                            <svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
+                                <g>
+                                    <rect y="1" width="16" height="2"></rect>
+                                    <rect y="7" width="16" height="2"></rect>
+                                    <rect y="13" width="16" height="2"></rect>
+                                </g>
+                            </svg>
+                        </a>
+                    </div>
+                    <div class="u-custom-menu u-nav-container">
+                    <ul class="u-nav u-unstyled u-nav-1">
+                        <a style="padding: 10px 20px;" href="{% url 'index' %}">Главная</a>
+                        <a style="padding: 10px 20px;" href="{% url 'create' %}">Статический маршрут</a>
+                        <a style="padding: 10px 20px;" href="{% url 'point' %}">Динамический маршрут</a>
+                        <a style="padding: 10px 20px;" href="{% url 'choose' %}">История</a>
+                    </ul>
+                  </div>
+                </nav>
             </div>
-            <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
-          </div>
-        </nav>
-      </div></header>
+        </header>
     <section class="u-clearfix u-valign-middle u-section-1" id="carousel_966c">
       <div class="u-clearfix u-expanded-width u-gutter-0 u-layout-wrap u-layout-wrap-1">
         <div class="u-layout">
@@ -142,9 +133,10 @@
                 <h2 class="u-custom-font u-font-montserrat u-text u-text-6">Введите описание маршрута<br>
                 </h2>
                 <div class="u-align-left u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-form u-form-1">
-                    {% csrf_token %}
-                  <form action="/p/" method="post" class="u-clearfix u-form-spacing-28 u-form-vertical u-inner-form" style="padding: 0px;"name="form">
-                    <div class="u-form-group u-form-number u-form-number-layout-number u-label-top u-form-group-1">
+
+                  <form action="/p/" method="post"> <!--class="u-clearfix u-form-spacing-28 u-form-vertical u-inner-form" style="padding: 0px;"name="form"-->
+                      {% csrf_token %}
+                      <div class="u-form-group u-form-number u-form-number-layout-number u-label-top u-form-group-1">
                       <label for="number-d877" class="u-label">Часы</label>
                       <div class="u-input-row" data-value="0">
                           {{form.hour}}
@@ -167,8 +159,7 @@
                     </div>
                       {{form.points}}
                     <div class="u-form-group u-form-submit u-label-top">
-                      <input type="submit" value="Submit" class="u-border-2 u-border-black u-btn u-btn-submit u-button-style u-hover-black u-none u-text-active-white u-text-black u-text-hover-white u-btn-1">Submit</input>
-                      <input type="submit" value="Submit" class="u-form-control-hidden"> <!--wfd-invisible="true"-->
+                      <input type="submit" value="Submit" ><!--class="u-border-2 u-border-black u-btn u-btn-submit u-button-style u-hover-black u-none u-text-active-white u-text-black u-text-hover-white u-btn-1"-->
                     </div>
                   </form>
                 </div>
@@ -179,18 +170,20 @@
       </div>
     </section>
 
-  {% for p in data %}
-        <!--div type="hidden" id="object-{{p.id}}" data-view-mode="list" value="{{p.id}}"-->
-            <input type="hidden" id="id-{{p.id}}" data-view-mode="list" value="{{p.id}}" readonly>
-            <input type="hidden" id="name-{{p.id}}" data-view-mode="list" value="{{p.name}}" readonly>
-            <input type="hidden" id="x-{{p.id}}" data-view-mode="list" value="{{p.coord_x}}" readonly>
-            <input type="hidden" id="y-{{p.id}}" data-view-mode="list" value="{{p.coord_y}}" readonly>
-        <!--/div-->
-    {% endfor %}
+      <div>
+      {% for p in data %}
+            <div type="hidden" id="object-{{p.id}}" data-view-mode="list" value="{{p.id}}">
+                <input type="hidden" id="id-{{p.id}}" data-view-mode="list" value="{{p.id}}" readonly>
+                <input type="hidden" id="name-{{p.id}}" data-view-mode="list" value="{{p.name}}" readonly>
+                <input type="hidden" id="x-{{p.id}}" data-view-mode="list" value="{{p.coord_x}}" readonly>
+                <input type="hidden" id="y-{{p.id}}" data-view-mode="list" value="{{p.coord_y}}" readonly>
+            </div>
+        {% endfor %}
+      </div>
     <input type="hidden" id="data" data-view-mode="list" value="{{data}}" readonly>
 
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-e954"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">Пример текста. Кликните, чтобы выбрать элемент "Текст".</p>
+        <p class="u-small-text u-text u-text-variant u-text-1">Сделано с <3 от команды Toxic tandem</p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
       <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
