--- a/mysite/maps/templates/main.html
+++ b/mysite/maps/templates/main.html
@@ -48,63 +48,13 @@
                         </a>
                     </div>
                     <div class="u-custom-menu u-nav-container">
-                        <ul class="u-nav u-unstyled u-nav-1">
-                            <li class="u-nav-item">
-                                <a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#" style="padding: 10px 20px;">Главная</a>
-                                <div class="u-nav-popup">
-                                    <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10">
-                                        <li class="u-nav-item">
-                                            <a class="u-button-style u-nav-link u-white">Динамический маршут</a>
-                                        </li>
-                                        <li class="u-nav-item">
-                                            <a class="u-button-style u-nav-link u-white">Статический маршрут</a>
-                                        </li>
-                                        <li class="u-nav-item">
-                                            <a class="u-button-style u-nav-link u-white">История маршрутов</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li class="u-nav-item">
-                                <a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#" style="padding: 10px 20px;">О нас</a>
-                            </li>
-                            <li class="u-nav-item">
-                                <a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#" style="padding: 10px 20px;">Контакты</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="u-custom-menu u-nav-container-collapse">
-                        <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
-                            <div class="u-inner-container-layout u-sidenav-overflow">
-                                <div class="u-menu-close"></div>
-                                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-3">
-                                    <li class="u-nav-item">
-                                        <a class="u-button-style u-nav-link" href="#">Главная</a>
-                                        <div class="u-nav-popup">
-                                            <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10">
-                                                <li class="u-nav-item">
-                                                    <a class="u-button-style u-nav-link">Динамический маршут</a>
-                                                </li>
-                                                <li class="u-nav-item">
-                                                    <a class="u-button-style u-nav-link">Статический маршрут</a>
-                                                </li>
-                                                <li class="u-nav-item">
-                                                    <a class="u-button-style u-nav-link">История маршрутов</a>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </li>
-                                    <li class="u-nav-item">
-                                        <a class="u-button-style u-nav-link" href="#">О нас</a>
-                                    </li>
-                                    <li class="u-nav-item">
-                                        <a class="u-button-style u-nav-link" href="#">Контакты</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
-                    </div>
+                    <ul class="u-nav u-unstyled u-nav-1">
+                        <a style="padding: 10px 20px;" href="{% url 'index' %}">Главная</a>
+                        <a style="padding: 10px 20px;" href="{% url 'create' %}">Статический маршрут</a>
+                        <a style="padding: 10px 20px;" href="{% url 'point' %}">Динамический маршрут</a>
+                        <a style="padding: 10px 20px;" href="{% url 'choose' %}">История</a>
+                    </ul>
+                  </div>
                 </nav>
             </div>
         </header>
@@ -210,7 +160,7 @@
         </section>
         <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-78f3">
             <div class="u-clearfix u-sheet u-sheet-1">
-                <p class="u-small-text u-text u-text-variant u-text-1">Пример текста. Кликните, чтобы выбрать элемент "Текст".</p>
+                <p class="u-small-text u-text u-text-variant u-text-1">Сделано с <3 от команды Toxic tandem</p>
             </div>
         </footer>
         <section class="u-backlink u-clearfix u-grey-80">
