--- a/mysite/maps/templates/validator.html
+++ b/mysite/maps/templates/validator.html
@@ -1,24 +1,12 @@
+
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Проверка</title>
 </head>
 <body>
-
-</body>
-</html>{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <a href="{% url 'choose' %}">Выбор статических маршрутов</a> <br>
-    <a href="{% url 'point' %}">Создать динамический маршрут</a> <br>
-    <a href="{% url 'create' %}">Создать статический маршрут</a> <br>
     {% for p in points %}
         <div type="hidden" id="object-{{p.id}}" data-view-mode="list" value="{{p.id}}" >
             <input type="hidden" id="id-{{p.id}}" data-view-mode="list" value="{{p.id}}" readonly>
@@ -38,7 +26,7 @@
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=9aba40a3-4745-48d5-8eb5-d04a9e23e584" type="text/javascript"></script>
     <script type="text/javascript" src="{% static 'js/validator.js' %}"> </script>
 
-    <div id="map"></div>
+    <div id="map" hidden></div>
 
     <style type="text/css">
         html, body {
@@ -84,4 +72,4 @@
 </body>
 </html>
 
-<!-- judger -->
+<!-- validator -->
